# molbubi.info

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.local.yml  docker-compose.yml  status.sh
.github/workflows/: deploy_to_vps.yml  manual-tests.yml  manual_deploy.yml
api/: Dockerfile  Dockerfile.test  TESTING.md  dependencies.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt  schemas.py
api-service/: pyproject.toml  requirements.txt
api-service/app/: main.py
api-service/app/api/v1/: api.py  dependencies.py
api-service/app/api/v1/endpoints/: bikes.py  stations.py
api-service/app/core/: config.py  exceptions.py
api-service/app/db/: crud.py  models.py  repository.py
api-service/app/services/: bike_service.py  station_service.py
api/app/: main.py
api/app/api/v1/: api.py  dependencies.py
api/app/api/v1/endpoints/: distribution.py  stations.py
api/app/bikes/: endpoints.py  repository.py  schema.py  service.py
api/app/core/: config.py
api/app/db/: repository.py
api/app/distribution/: endpoints.py  repository.py  schema.py  service.py
api/app/schemas/: bike.py  station.py  stay.py
api/app/services/: distribution_service.py  station_service.py
api/app/shared/: dependencies.py  exceptions.py  repository.py  schemas.py
api/app/stations/: endpoints.py  repository.py  schema.py  service.py  stay_schema.py
api/core/: exceptions.py  utils.py
api/core/dependencies/: repositories.py  services.py  session.py
api/endpoints/: __init__.py  distance.py  distribution.py  history.py  station.py
api/repositories/: base.py  bike_repository.py
api/schemas/: distance.py  distribution.py  history.py
api/services/: base.py  bike_service.py  bike_service_provider.py  distance_service.py  distribution_service.py  history_service.py
api/tests/: conftest.py  test_bikes_repository.py  test_bikes_service.py  test_core_config.py  test_distribution_repository.py  test_distribution_service.py  test_endpoints_bikes.py  test_endpoints_distribution.py  test_endpoints_stations.py  test_main.py  test_shared_database.py  test_shared_exceptions.py  test_shared_repository.py  test_shared_schemas.py  test_stations_repository.py  test_stations_service.py
collector/: .env.example  pyproject.toml
collector/app/schemas/: nextbike.py
collector/tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_main.py  test_poller.py  test_redis_client.py  test_schemas.py
collector/tests/fixtures/: nextbike_response.json
data-collector/: Dockerfile  requirements.txt
data-collector/app/: main.py
data-collector/app/api/: client.py
data-collector/app/core/: config.py
data-collector/app/services/: poller.py
data-collector/app/storage/: redis_client.py
data-processor/: requirements.txt
data-processor/app/: main.py
data-processor/app/core/: config.py
data-processor/app/db/: crud.py  database.py  models.py  repository.py
data-processor/app/schemas/: bike_data.py
data-processor/app/services/: consumer.py  processing.py
data_collection/: Dockerfile  cache_service.py  main.py  requirements.txt  schemas.py
db_migrator/: Dockerfile  main.py  requirements.txt
frontend/: .env.example  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/components/: BikeCard.tsx  DateRangeFilter.tsx  Layout.tsx  SearchInput.tsx
frontend/src/lib/: date.ts  env.ts  highlight.tsx
frontend/src/pages/: BikesPage.tsx  DistributionPage.tsx  HomePage.tsx  StationDetailPage.tsx  StationsPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: api.ts
migrations/: Dockerfile  Dockerfile.test  alembic.ini  config.py  docker-compose.test.yml  models.py  pyproject.toml  pytest.ini  run_migrations.py  run_migrations.sh  run_tests.py
migrations/alembic/: env.py
migrations/tests/: conftest.py  test_alembic.py  test_config.py  test_integration.py  test_models.py  test_run_migrations.py
processor/: Dockerfile  Dockerfile.test  pyproject.toml
processor/app/db/: crud.py  database.py  models.py  repository.py
processor/app/schemas/: bike_data.py
processor/app/services/: processing.py
processor/shared_models/: models.py
processor/tests/: conftest.py  test_config.py  test_consumer.py.bak  test_consumer_simple.py  test_coverage_booster.py  test_database.py.bak  test_database_simple.py  test_main.py.bak  test_main_simple.py  test_processing.py.bak  test_processing_simple.py  test_repositories.py.bak  test_repositories_simple.py  test_schemas.py
shared/: database.py  logger.py  models.py
