[tool.poetry]
name = "molbubi.info"
version = "0.3.0-alpha.6"
description = ""
authors = ["Fibo"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
redis = "^6.2.0"
fastapi-restful = "^0.6.0"
typing-inspect = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
