[tool.poetry]
name = "molbubi-collector"
version = "0.1.0"
description = "Bike tracking data collector service"
authors = ["Viktor"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
redis = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"