[tool.poetry]
name = "molbubi-processor"
version = "0.1.0"
description = "Bike tracking data processor service"
authors = ["Viktor"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
SQLAlchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"