[tool.poetry]
name = "molbubi-processor"
version = "0.1.0"
description = "Bike tracking data processor service"
authors = ["Viktor"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
SQLAlchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"
fakeredis = "^2.18.0"
sqlalchemy-utils = "^0.41.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=95"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "*/conftest.py"]